<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tqbot_description</name>
  <version>0.0.0</version>
  <description>
    Robot description package for the TQBot platform. This package contains the URDF/Xacro models and related resources used to represent the robot within the Robot Swarm system.
  </description>
  <maintainer email="sven.vanschie@student.fontys.nl">Sven van Schie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
