<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tqbot_webots</name>
  <version>0.0.0</version>
  <description>
    Webots integration package for the TQBot platform. This package provides the
    simulation environment, launch files, and configuration required to run and
    interface the robot within Webots as part of the Robot Swarm system.
  </description>

  <maintainer email="sven.vanschie@student.fontys.nl">Sven van Schie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>webots_ros2_driver</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tqbot_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>